[package]
name = "ndjson-stream"
version = "0.1.0"
authors = [ "Florian Weinacker <florian1345@gmx.de>" ]
edition = "2021"
description = "A library to read NDJSON-formatted data in a streaming manner."
documentation = "https://docs.rs/ndjson-stream/latest/ndjson-stream/"
readme = "README.md"
repository = "https://github.com/florian1345/ndjson-stream"
license = "MIT OR Apache-2.0"
keywords = [ "ndjson", "json", "lines" ]
categories = [ "parser-implementations" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
kernal = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
tokio-test = "0.4"

[features]
default = [ "iter" ]

bytes = [ "dep:bytes" ]
iter = []
stream = [ "dep:futures", "dep:pin-project-lite" ]
